[gd_scene load_steps=15 format=3 uid="uid://cdk0811tq5qk3"]

[ext_resource type="Script" path="res://Scripts/base_building.gd" id="1_yuylh"]
[ext_resource type="Texture2D" uid="uid://boh8ddgkkwhsv" path="res://Sprites/Test/roguelikeSheet_transparent.png" id="2_tcsa3"]
[ext_resource type="Texture2D" uid="uid://wf3dfst8y81g" path="res://Sprites/Smoke.png" id="3_va5l3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_53lnq"]
atlas = ExtResource("2_tcsa3")
region = Rect2(918, 136, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_56hfa"]
atlas = ExtResource("3_va5l3")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jpkl"]
atlas = ExtResource("3_va5l3")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmdv4"]
atlas = ExtResource("3_va5l3")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l65ol"]
atlas = ExtResource("3_va5l3")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_epfa6"]
atlas = ExtResource("3_va5l3")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fvhn"]
atlas = ExtResource("3_va5l3")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vu23c"]
atlas = ExtResource("3_va5l3")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_22efr"]
atlas = ExtResource("3_va5l3")
region = Rect2(336, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_i84pv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_56hfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jpkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmdv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l65ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epfa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fvhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vu23c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22efr")
}],
"loop": true,
"name": &"production",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_agb7b"]

[node name="base_building" type="StaticBody2D" node_paths=PackedStringArray("off_sprite", "on_anim")]
input_pickable = true
script = ExtResource("1_yuylh")
off_sprite = NodePath("off_sprite")
on_anim = NodePath("on_anim")

[node name="off_sprite" type="Sprite2D" parent="."]
texture_filter = 1
use_parent_material = true
texture = SubResource("AtlasTexture_53lnq")

[node name="on_anim" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_i84pv")
animation = &"production"
autoplay = "production"
frame_progress = 0.832922

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_agb7b")

[connection signal="input_event" from="." to="." method="_on_input_event"]
